# secret_diary

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
app/: main.py
app/Exceptions/: __init__.py
app/Exceptions/InvalidData/: main.py
app/Exceptions/config_missing/: main.py
app/commands/: __stats.py  init.py  lock.py  stats.py  unlock.py
docs/: TODO.md
errors/: __init__.py
errors/config_missing/: main.py
test/.sec.d/logs/: time-stamp.db
utils/: __init__.py  get_command.py  list_command.py
utils/_zipfile/: zipfile_manager.py
utils/config/: ConfigExists.py  config_check.py
utils/core/: commands.py  get_command.py  list_command.py  main.py
utils/init/: new_diary.py  resolve_diary.py
utils/initial/: new_diary.py
utils/logging/: context_manage.py  sql_context_manager.py  util_sqlite3.py
utils/new_diary/: resolve_diary.py
utils/timeutil/: main.py
utils/zip/: zipfile_manager.py
utils/zipper/: zipfile_manager.py
