# Not Complete

[project]
name = "secret_diary"
authors = ["ext8"]
description = "Your private diary is now protected with encryption."

version = "0.2.4"
python = "^3.8"
license = "MIT"

readme = "README.md"

homepage = "https://github.com/ext8/secret_diary"
repository = "https://github.com/ext8/secret_diary"
documentation = "https://github.com/ext8/secret_diary"

keywords = ["cli", "tui", "click", "secret_diary"]



[dev-dependencies]


[scripts]


[build-system]

requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"


[tool.black]

include = '\.pyi?$'
line-length = 88
target_version = ['py36']